# KeyCodeBlocker

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  KeyCodeBlocker.cpp  KeyCodeBlocker.h  KeyCodeBlocker.rc  KeyCodeHooker.cpp  KeyCodeHooker.h  app.manifest
